===============================================================================
Changes for faraday
===============================================================================

DONE:
3/20/08 - add developer control to turn on/off display of pickup coil sample points
3/20/08 - simplify setting of DEBUG_DISPLAY_FLUX from Developer menu
3/20/08 - read -dev command line arg to enable developer controls
3/20/08 - delete CVS file headers, remove CVS keywords from javadoc, organize imports
3/20/08 - increase range of loop area control [#425]
3/20/08 - revert settings if Field Controls dialog is closed via close button in window dressing
3/20/08 - ensure that Options menu can't open multiple copies of the same dialog [#427]
3/20/08 - convert to new-style tabs for switching modules [#426]
3/19/08 - remove redundant entries from localization files
3/19/08 - statically load all localized strings in FaradayStrings
3/19/08 - remove MessageFormat-style strings from localization files, convert to symbolic constants
3/19/08 - remove obsolete/disabled "challenge" from Transformer module and localization files
11/9/07 - move about.credits property to localization file
10/9/07 - migrate "Reset All" and "set minimum width" features to phetcommon ControlPanel
********* version 1.05.00 (17033)
7/27/07 - new version published as part of new website deployment
7/2/07 - wrap the body of main in invokeLater
6/15/07 - convert description properties to well-formed HTML
4/24/07 - replace ControlPanelSlider with LinearValueControl from phetcommon
4/7/07 - organize imports
4/7/07 - set locale in Spanish JNLP file via javaws.phet.locale property
4/7/07 - encapsulate loading of strings and images in FaradayResources
4/7/07 - convert from SimStrings to PhetProjectConfig
3/20/07 - move ColorChooserFactory to phetcommon
3/14/07 - rename FaradayConfig to FaradayConstants to be consistent with my other sims
3/14/07 - rename SimStrings files to have basename faraday_strings