@@ -3,6 +3,7 @@ Changes for faraday
 ===============================================================================
 
 DONE:
+3/20/08 - add developer control to show electromagnet model shape
 3/20/08 - add developer control to turn on/off display of pickup coil sample points
 3/20/08 - simplify setting of DEBUG_DISPLAY_FLUX from Developer menu
 3/20/08 - read -dev command line arg to enable developer controls
